examples/avm-res-storage-storageaccount/0.7.1/submodules/private_endpoint/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
<!-- BEGIN\_TF\_DOCS -->
# Internal submodule: private\_endpoint

This is an internal submodule used by `terraform-azurerm-avm-res-storage-storageaccount`. Consumers MUST NOT call this submodule directly. Refer to the root module for supported inputs.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.10.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.8)

## Resources

The following resources are used by this module:

- [azapi_resource.lock](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.private_dns_zone_group](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)
- [azapi_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_location"></a> [location](#input\_location)

Description: (Required) The Azure region of the private endpoint.

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: (Required) The name of the private endpoint.

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: (Required) The full resource ID of the resource group in which the private endpoint will be created.

Type: `string`

### <a name="input_private_connection_resource_id"></a> [private\_connection\_resource\_id](#input\_private\_connection\_resource\_id)

Description: (Required) The full resource ID of the resource that the private endpoint connects to (the storage account).

Type: `string`

### <a name="input_subnet_resource_id"></a> [subnet\_resource\_id](#input\_subnet\_resource\_id)

Description: (Required) The subnet to deploy the private endpoint into.

Type: `string`

### <a name="input_subresource_name"></a> [subresource\_name](#input\_subresource\_name)

Description: (Required) The target subresource name (e.g. `blob`, `dfs`, `file`, `queue`, `table`, `web`).

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_application_security_group_resource_ids"></a> [application\_security\_group\_resource\_ids](#input\_application\_security\_group\_resource\_ids)

Description: (Optional) Application security groups to associate with the private endpoint. Defaults to `{}`. Map key is arbitrary; value is the ASG resource ID.

Type: `map(string)`

Default: `{}`

### <a name="input_dns_zone_group_resource_type"></a> [dns\_zone\_group\_resource\_type](#input\_dns\_zone\_group\_resource\_type)

Description: (Optional) Override the AzAPI `<provider>/<resource>@<api-version>` string used to manage the private DNS zone group attached to the private endpoint. Defaults to the value tested with this module version.

Type: `string`

Default: `"Microsoft.Network/privateEndpoints/privateDnsZoneGroups@2025-05-01"`

### <a name="input_ip_configurations"></a> [ip\_configurations](#input\_ip\_configurations)

Description: (Optional) Static IP configurations for the private endpoint. Defaults to `{}` (the platform allocates IPs). The map key is arbitrary; each value supports:

- `name` - (Required) The name of the IP configuration.
- `private_ip_address` - (Required) The static private IP address to assign.

Type:

```hcl
map(object({
    name               = string
    private_ip_address = string
  }))
```

Default: `{}`

### <a name="input_lock"></a> [lock](#input\_lock)

Description: (Optional) Management lock to apply to the private endpoint. Defaults to `null` (no lock).

- `kind` - (Required) The kind of lock. Possible values are `CanNotDelete` and `ReadOnly`.
- `name` - (Optional) The name of the lock. Defaults to `null` (auto-generated).

Type:

```hcl
object({
    name = optional(string, null)
    kind = string
  })
```

Default: `null`

### <a name="input_lock_resource_type"></a> [lock\_resource\_type](#input\_lock\_resource\_type)

Description: (Optional) Override the AzAPI `<provider>/<resource>@<api-version>` string used to manage the management lock applied to the private endpoint. Defaults to the value tested with this module version.

Type: `string`

Default: `"Microsoft.Authorization/locks@2020-05-01"`

### <a name="input_manage_dns_zone_group"></a> [manage\_dns\_zone\_group](#input\_manage\_dns\_zone\_group)

Description: (Optional) Whether the private endpoint's DNS zone group should be managed by this module. Defaults to `true`.

Type: `bool`

Default: `true`

### <a name="input_network_interface_name"></a> [network\_interface\_name](#input\_network\_interface\_name)

Description: (Optional) Custom name for the network interface created with the private endpoint. Defaults to `null` (auto-generated).

Type: `string`

Default: `null`

### <a name="input_private_dns_zone_group_name"></a> [private\_dns\_zone\_group\_name](#input\_private\_dns\_zone\_group\_name)

Description: (Optional) The name of the private DNS zone group. Defaults to `default`.

Type: `string`

Default: `"default"`

### <a name="input_private_dns_zone_resource_ids"></a> [private\_dns\_zone\_resource\_ids](#input\_private\_dns\_zone\_resource\_ids)

Description: (Optional) Private DNS zone resource IDs to associate with the private endpoint. Defaults to `[]` (no zones associated).

Type: `set(string)`

Default: `[]`

### <a name="input_private_service_connection_name"></a> [private\_service\_connection\_name](#input\_private\_service\_connection\_name)

Description: (Optional) The name of the private service connection. Defaults to `null` (auto-generated as `pse-<endpoint name>`).

Type: `string`

Default: `null`

### <a name="input_resource_type"></a> [resource\_type](#input\_resource\_type)

Description: (Optional) Override the AzAPI `<provider>/<resource>@<api-version>` string used to manage the private endpoint. Defaults to the value tested with this module version.

Type: `string`

Default: `"Microsoft.Network/privateEndpoints@2025-05-01"`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: (Optional) Retry configuration applied to AzAPI resources managed by this module. Defaults to `null` (no custom retry).

- `error_message_regex` - (Optional) A list of regex patterns matching error messages that trigger a retry. Defaults to `null`.
- `interval_seconds` - (Optional) Initial interval between retries in seconds. Defaults to `null` (provider default).
- `max_interval_seconds` - (Optional) Maximum interval between retries in seconds. Defaults to `null` (provider default).

Type:

```hcl
object({
    error_message_regex  = optional(list(string))
    interval_seconds     = optional(number)
    max_interval_seconds = optional(number)
  })
```

Default: `null`

### <a name="input_role_assignment_definition_lookup_enabled"></a> [role\_assignment\_definition\_lookup\_enabled](#input\_role\_assignment\_definition\_lookup\_enabled)

Description: (Optional) Whether the `role_assignments` submodule should resolve role definition names supplied via `role_definition_id_or_name` by querying the Azure Authorization API. Defaults to `true`. See the `role_assignments` submodule for details.

Type: `bool`

Default: `true`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description: (Optional) A map of role assignments to create at the private endpoint scope. Defaults to `{}`. See the `role_assignments` submodule for the attribute schema.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: (Optional) Tags to apply to the private endpoint. Defaults to `null` (no tags).

Type: `map(string)`

Default: `null`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description: (Optional) Per-operation timeouts applied to AzAPI resources managed by this module. Defaults to `null` (provider defaults). Each value is a Go duration string (e.g. `30m`, `1h`).

- `create` - (Optional) Timeout for create operations. Defaults to `null`.
- `read` - (Optional) Timeout for read operations. Defaults to `null`.
- `update` - (Optional) Timeout for update operations. Defaults to `null`.
- `delete` - (Optional) Timeout for delete operations. Defaults to `null`.

Type:

```hcl
object({
    create = optional(string)
    read   = optional(string)
    update = optional(string)
    delete = optional(string)
  })
```

Default: `null`

### <a name="input_tracing_tags_header"></a> [tracing\_tags\_header](#input\_tracing\_tags\_header)

Description: (Optional) User-Agent string injected into AzAPI request headers. Defaults to `null` (no custom header).

Type: `string`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the private endpoint.

### <a name="output_private_dns_zone_group_id"></a> [private\_dns\_zone\_group\_id](#output\_private\_dns\_zone\_group\_id)

Description: The resource ID of the private DNS zone group (if managed by this module), otherwise `null`.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the private endpoint.

### <a name="output_role_assignments"></a> [role\_assignments](#output\_role\_assignments)

Description: Map of role assignment resources created at the private endpoint scope, keyed by the input map key.

## Modules

The following Modules are called:

### <a name="module_role_assignments"></a> [role\_assignments](#module\_role\_assignments)

Source: ../role_assignments

Version:

<!-- END\_TF\_DOCS -->
<!-- END_TF_DOCS -->
